Convert messages to human readable format
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abstraction-with-block-summaries@46390 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c